# data_scrapper

./: Dockerfile  README.md  app.py  docker-compose.yaml  pyproject.toml  requirements.txt  services.py
.github/workflows/: backend_CI_CD_.yml
kapsarc_data_scraper/: data_scrapper.py  logging_utils.py  main.py  update_web.py
kapsarc_data_scraper/sqlite_database/: beyond_2020.db  database_utils.py
tests/: test_data_scrapper.py  test_data_utils.py  test_update_web.py
