[tool.poetry]
name = "kapsarc_data_scraper"
version = "0.1.0"
description = "data scrapper and processing for KAPSARC data"
authors = ["omar charif <charif.omar83@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
bs4 = "^0.0.1"
requests = "^2.28.2"
selenium = "^4.8.0"
pandas = "^1.5.3"

[tool.poetry.dev-dependencies]
black = "^22.12.0"
flakehell = "^0.9.0"
taskipy = "^1.10.3"
pylint = "^2.15.10"

[tool.flakehell]
format = "grouped"
ignore = ["W503", "W0703", "E1101", "W0511", "E1137", "W0221"]
max_line_length = 120
max-complexity = 10
# show line of source code in output
show_source = true

# list of plugins and rules for them
[tool.flakehell.plugins]
pyflakes = ["+*"]
pycodestyle = ["+*"]
pylint = ["+*"]
mccabe = ["+*"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
